<resources>
    <string name="app_name">calculator</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <string name="clear">CE</string>
    <string name="back">back</string>
    <string name="answer">=</string>

    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="plusMinus">±</string>
    <string name="sqrt">√</string>
    <string name="display">0</string>

</resources>